--- a/style.css
+++ b/style.css
@@ -23,12 +23,41 @@ h3{
     font-weight: 600;
     opacity: 0.8;
 }
+
+.pop-up{
+    width: 25vw;
+    padding: 2rem 3rem;
+    margin: 2rem 0rem;
+    background: linear-gradient(
+        to right bottom,
+     rgba(255,255,255,0.8),
+     rgba(255,255,255,0.3));
+     backdrop-filter: blur(2rem);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border-radius: 5rem;
+    transform: translateY(30px);
+    animation: appears 2s linear forwards;
+    opacity: 1;
+    
+}
+
+@keyframes appears {
+    100%{
+        opacity: 0;
+        transform: translateY(-15px);
+        transform: scale(5px);
+    }
+}
+
 main{
     font-family:'Poppins',sans-serif;
     min-height: 100vh;
     background: linear-gradient(to right top, #36ffda, #01e1ff);
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
 
 }
